@@ -56,4 +56,3 @@
 
  - sudo issue still?
 
- - if memory is low, don't pre-load
